manifests-failed/connaisseur-2.5.0.tgz-manifest.yaml
---
# Source: connaisseur/templates/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: connaisseur-redis-service
  namespace: connaisseur-2.5.0.tgz
  labels:
    helm.sh/chart: connaisseur-2.5.0
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: connaisseur
    app.kubernetes.io/version: "3.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: redis
---
# Source: connaisseur/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connaisseur-svc
  namespace: connaisseur-2.5.0.tgz
  labels:
    helm.sh/chart: connaisseur-2.5.0
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: connaisseur
    app.kubernetes.io/version: "3.5.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: connaisseur
---
# Source: connaisseur/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connaisseur
  namespace: connaisseur-2.5.0.tgz
  labels:
    helm.sh/chart: connaisseur-2.5.0
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: connaisseur
    app.kubernetes.io/version: "3.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    checksum/config: c8de91b6536a21f8cf2422b4c2462656c37fe4e4b8200c167f05276c64ebe588
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: connaisseur
      app.kubernetes.io/instance: connaisseur
  template:
    metadata:
      labels:
        app.kubernetes.io/name: connaisseur
        app.kubernetes.io/instance: connaisseur
      annotations:
        checksum/config: c8de91b6536a21f8cf2422b4c2462656c37fe4e4b8200c167f05276c64ebe588
    spec:
      serviceAccountName: connaisseur-serviceaccount
      containers:
        - name: connaisseur
          image: docker.io/securesystemsengineering/connaisseur:v3.5.0
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /ready
              port: https
              scheme: HTTPS
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 20001
            runAsNonRoot: true
            runAsUser: 10001
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: certs
              mountPath: /app/certs
              readOnly: true
            - name: app-config
              mountPath: /app/config
              readOnly: true
            - name: redis-certs
              mountPath: /app/redis-certs/tls.crt
              readOnly: true
              subPath: tls.crt
            - name: connaisseur-alert-config
              mountPath: /app/alerts/config.yaml
              readOnly: true
              subPath: config.yaml
            
      volumes:
        - name: certs
          secret:
            secretName: connaisseur-tls
        - name: redis-certs
          secret:
            secretName: connaisseur-redis-tls
        - name: app-config
          configMap:
            name: connaisseur-app-config
        - name: connaisseur-alert-config
          configMap:
            name: connaisseur-alert-config
        
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - connaisseur
              topologyKey: kubernetes.io/hostname
            weight: 100
      tolerations:
        []
      nodeSelector:
        {}
      securityContext:
        {}
---
# Source: connaisseur/templates/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connaisseur-redis
  namespace: connaisseur-2.5.0.tgz
  labels:
    helm.sh/chart: connaisseur-2.5.0
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: connaisseur
    app.kubernetes.io/version: "3.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    checksum/config: c8de91b6536a21f8cf2422b4c2462656c37fe4e4b8200c167f05276c64ebe588
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: connaisseur
      app.kubernetes.io/instance: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: connaisseur
        app.kubernetes.io/instance: redis
      annotations:
        checksum/config: c8de91b6536a21f8cf2422b4c2462656c37fe4e4b8200c167f05276c64ebe588
    spec:
      automountServiceAccountToken: false
      containers:
      - name: redis
        image: redis:7
        imagePullPolicy: Always
        args:
          - --requirepass
          - $(REDIS_PASSWORD)
          - --tls-cert-file
          - /cfg/certs/tls.crt
          - --tls-key-file
          - /cfg/certs/tls.key
          - --tls-auth-clients
          - "no"
          - --tls-port
          - "6379"
          - --port
          - "6380"
          - --loglevel
          - "notice"
          - --rename-command
          - FLUSHALL
          - ""
          - --rename-command
          - FLUSHDB
          - ""
        ports:
          - containerPort: 6379
            name: redis
            protocol: TCP
        livenessProbe:
          exec:
            command:
              - redis-cli
              - -p
              - "6380"
              - ping
        readinessProbe:
          exec:
            command:
              - redis-cli
              - -p
              - "6380"
              - ping
        volumeMounts:
          - name: certs
            mountPath: /cfg/certs
            readOnly: true
        resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 20001
            runAsNonRoot: true
            runAsUser: 10001
            seccompProfile:
              type: RuntimeDefault
      securityContext:
        {}
      volumes:
        - name: certs
          secret:
            secretName: connaisseur-redis-tls
---
# Source: connaisseur/templates/webhook+certificate.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: connaisseur-webhook
  labels:
    helm.sh/chart: connaisseur-2.5.0
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: connaisseur
    app.kubernetes.io/version: "3.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": post-delete
    "helm.sh/hook-delete-policy": before-hook-creation, hook-succeeded, hook-failed
webhooks:
  - name: connaisseur-svc.connaisseur-2.5.0.tgz.svc
    failurePolicy: Ignore
    reinvocationPolicy: Never
    clientConfig:
      service:
        name: connaisseur-svc
        namespace: connaisseur-2.5.0.tgz
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ0RENDQXNpZ0F3SUJBZ0lSQU9QSWpvVFdTZ0JueUx6cSsvQnQyWXd3RFFZSktvWklodmNOQVFFTEJRQXcKTkRFeU1EQUdBMVVFQXhNcFkyOXVibUZwYzNObGRYSXRjM1pqTG1OdmJtNWhhWE56WlhWeUxUSXVOUzR3TG5SbgplaTV6ZG1Nd0lCY05NalF3TmpJd01UUTFOVFE1V2hnUE1qRXlOREExTWpjeE5EVTFORGxhTURReE1qQXdCZ05WCkJBTVRLV052Ym01aGFYTnpaWFZ5TFhOMll5NWpiMjV1WVdsemMyVjFjaTB5TGpVdU1DNTBaM291YzNaak1JSUIKSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXFHOC96b21TR3ZxdXp5MWtUcFh6azgydwpRaHlPSFVYdDlP [...]
    rules: []
    sideEffects: None
    admissionReviewVersions: ["v1"]
---
# Source: connaisseur/templates/webhook+certificate.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: connaisseur-webhook
  labels:
    helm.sh/chart: connaisseur-2.5.0
    app.kubernetes.io/name: connaisseur
    app.kubernetes.io/instance: connaisseur
    app.kubernetes.io/version: "3.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": post-install, post-upgrade, post-rollback
webhooks:
  - name: connaisseur-svc.connaisseur-2.5.0.tgz.svc
    failurePolicy: Fail
    reinvocationPolicy: Never
    clientConfig:
      service:
        name: connaisseur-svc
        namespace: connaisseur-2.5.0.tgz
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ0RENDQXNpZ0F3SUJBZ0lSQU9QSWpvVFdTZ0JueUx6cSsvQnQyWXd3RFFZSktvWklodmNOQVFFTEJRQXcKTkRFeU1EQUdBMVVFQXhNcFkyOXVibUZwYzNObGRYSXRjM1pqTG1OdmJtNWhhWE56WlhWeUxUSXVOUzR3TG5SbgplaTV6ZG1Nd0lCY05NalF3TmpJd01UUTFOVFE1V2hnUE1qRXlOREExTWpjeE5EVTFORGxhTURReE1qQXdCZ05WCkJBTVRLV052Ym01aGFYTnpaWFZ5TFhOMll5NWpiMjV1WVdsemMyVjFjaTB5TGpVdU1DNTBaM291YzNaak1JSUIKSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXFHOC96b21TR3ZxdXp5MWtUcFh6azgydwpRaHlPSFVYdDlP [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments", "replicasets", "daemonsets", "statefulsets"]
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods", "pods/ephemeralcontainers", "replicationcontrollers"]
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["batch"]
        apiVersions: ["v1"]
        resources: ["jobs", "cronjobs"]
    sideEffects: None
    timeoutSeconds: 30
    admissionReviewVersions: ["v1"]
    namespaceSelector:
      matchExpressions:
      - key: securesystemsengineering.connaisseur/webhook
        operator: NotIn
        values:
          - ignore
